--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
         
         <footer>
             <p>
-                <a href="https://github.com" class="github-link">View on GitHub</a> | 
-                Pingu - Solar © 2024
+                <a href="https://github.com" class="github-link"></a> | 
+                Pingu - Solar © 2025
             </p>
         </footer>
     </div>
