--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <footer>
             <p>
                 <a href="https://github.com" class="github-link"></a> | 
-                Pingu - Solar © 2025
+                Pingu - Solar 2025. Barry Dixon
             </p>
         </footer>
     </div>
