--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         
         <main>
             <nav class="nav-grid">
-                <a href="#upload-data" class="nav-card">
+                <a href="uploaddata.html" class="nav-card">
                     <div class="nav-card-content">
                         <span class="nav-card-icon">📤</span>
                         <h2>Upload Data</h2>
@@ -324,7 +324,7 @@
         
         <footer>
             <p>
-                <a href="https://github.com" class="github-link"></a> | 
+                <a href="https://github.com" class="github-link"></a> 
                 Pingu - Solar 2025. Barry Dixon
             </p>
         </footer>
