--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     </div>
                 </a>
                 
-                <a href="#job-search" class="nav-card">
+                <a href="jobsearch.html" class="nav-card">
                     <div class="nav-card-content">
                         <span class="nav-card-icon">🔍</span>
                         <h2>Job Search</h2>
