--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     </div>
                 </a>
                 
-                <a href="#teams" class="nav-card">
+                <a href="addeditteam.html" class="nav-card">
                     <div class="nav-card-content">
                         <span class="nav-card-icon">👥</span>
                         <h2>Add/Edit Teams</h2>
