--- a/index.html
+++ b/index.html
@@ -399,11 +399,11 @@
                 <div class="stat-breakdown">
                     <div class="stat-item">
                         <div class="stat-item-label">Total</div>
-                        <div class="stat-item-value" id="all-total">0</div>
+                        <div class="stat-item-value" id="all-total">-</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-item-label">Completed</div>
-                        <div class="stat-item-value completed" id="all-completed">0</div>
+                        <div class="stat-item-value completed" id="all-completed">-</div>
                     </div>
                 </div>
             </div>
@@ -416,11 +416,11 @@
                 <div class="stat-breakdown">
                     <div class="stat-item">
                         <div class="stat-item-label">Total</div>
-                        <div class="stat-item-value" id="week-total">0</div>
+                        <div class="stat-item-value" id="week-total">-</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-item-label">Completed</div>
-                        <div class="stat-item-value completed" id="week-completed">0</div>
+                        <div class="stat-item-value completed" id="week-completed">-</div>
                     </div>
                 </div>
             </div>
@@ -433,11 +433,11 @@
                 <div class="stat-breakdown">
                     <div class="stat-item">
                         <div class="stat-item-label">Total</div>
-                        <div class="stat-item-value" id="month-total">0</div>
+                        <div class="stat-item-value" id="month-total">-</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-item-label">Completed</div>
-                        <div class="stat-item-value completed" id="month-completed">0</div>
+                        <div class="stat-item-value completed" id="month-completed">-</div>
                     </div>
                 </div>
             </div>
