--- a/uploaddata.html
+++ b/uploaddata.html
@@ -777,7 +777,7 @@
             apiKey: "AIzaSyAc_yJQ_rkzuOBh-Yxg0Q4eooXtB-tQjm0",
             authDomain: "pingu-solar.firebaseapp.com",
             projectId: "pingu-solar",
-            storageBucket: "pingu-solar.appspot.com",
+            storageBucket: "pingu-solar.firebasestorage.app",
             messagingSenderId: "232764952866",
             appId: "1:232764952866:web:5923b7f419de6355d6157b",
             measurementId: "G-PFH059DZ64"
