--- a/teamview.html
+++ b/teamview.html
@@ -818,6 +818,17 @@
                     </div>
                 </div>
             </div>
+
+            <a href="#requests" class="nav-card">
+                    <div class="nav-card-content">
+                        <span class="nav-card-icon">📋</span>
+                        <h2>Additional Day/Materials Request</h2>
+                        <p>Submit requests for extra workdays or additional materials. Track approval status.</p>
+                        <span class="badge">Requests</span>
+                    </div>
+                </a>
+            </nav>
+        </main>
             
             <!-- Job Search Section -->
             <section class="search-section" id="search-section" style="display: none;">
