--- a/uploaddata.html
+++ b/uploaddata.html
@@ -813,7 +813,7 @@
         
         const requiredFields = [
             'Job Number', 'Name', 'Phone Number', 'Email Address',
-            '1st line of address', 'Postcode', 'Install Date', 'Lead Engineer'
+            '1st line of address', 'Postcode', 'Install Date', 'Lead Engineer', 'Job Length'
         ];
         
         // Step 1: Job CSV Upload
