--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 </div>
                 <div class="stat-breakdown">
                     <div class="stat-item">
-                        <div class="stat-item-label">Jobs Total</div>
+                        <div class="stat-item-label">Jobs Submitted</div>
                         <div class="stat-item-value" style="color: var(--accent);" id="all-total">-</div>
                     </div>
                     <div class="stat-item">
@@ -429,7 +429,7 @@
                 </div>
                 <div class="stat-breakdown">
                     <div class="stat-item">
-                        <div class="stat-item-label">Jobs Total</div>
+                        <div class="stat-item-label">Installs Submitted</div>
                         <div class="stat-item-value" style="color: var(--accent);" id="week-total">-</div>
                     </div>
                     <div class="stat-item">
@@ -437,7 +437,7 @@
                         <div class="stat-item-value" style="color: var(--secondary);" id="week-started">-</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-item-label">Install Complete</div>
+                        <div class="stat-item-label">Installs Complete</div>
                         <div class="stat-item-value completed" id="week-completed">-</div>
                     </div>
                 </div>
@@ -450,7 +450,7 @@
                 </div>
                 <div class="stat-breakdown">
                     <div class="stat-item">
-                        <div class="stat-item-label">Jobs Total</div>
+                        <div class="stat-item-label">Jobs Submitted</div>
                         <div class="stat-item-value" style="color: var(--accent);" id="month-total">-</div>
                     </div>
                     <div class="stat-item">
