--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 </div>
                 <div class="stat-breakdown">
                     <div class="stat-item">
-                        <div class="stat-item-label">Jobs Submitted</div>
+                        <div class="stat-item-label">Installs Submitted</div>
                         <div class="stat-item-value" style="color: var(--accent);" id="all-total">-</div>
                     </div>
                     <div class="stat-item">
@@ -416,7 +416,7 @@
                         <div class="stat-item-value" style="color: var(--secondary);" id="all-started">-</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-item-label">Install Complete</div>
+                        <div class="stat-item-label">Installs Complete</div>
                         <div class="stat-item-value completed" id="all-completed">-</div>
                     </div>
                 </div>
