--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 </div>
                 <div class="stat-breakdown">
                     <div class="stat-item">
-                        <div class="stat-item-label">Jobs Submitted</div>
+                        <div class="stat-item-label">Installs Submitted</div>
                         <div class="stat-item-value" style="color: var(--accent);" id="month-total">-</div>
                     </div>
                     <div class="stat-item">
