--- a/jobsearch.html
+++ b/jobsearch.html
@@ -1644,6 +1644,12 @@
             return div.innerHTML;
         }
         
+        function decodeHtml(html) {
+            const txt = document.createElement('textarea');
+            txt.innerHTML = html;
+            return txt.value;
+        }
+        
         function formatDate(dateString) {
             if (!dateString) return 'N/A';
             const date = new Date(dateString);
