--- a/teamview.html
+++ b/teamview.html
@@ -1164,7 +1164,7 @@
                         </div>
                     </div>
                     
-                    <div class="nav-card" onclick="showView('requests')">
+                    <a href="additionaldaymaterials.html" class="nav-card">
                         <div class="nav-card-content">
                             <span class="nav-card-icon">📝</span>
                             <h2>Additional Day/Materials Request</h2>
