--- a/additionaldaymaterials.html
+++ b/additionaldaymaterials.html
@@ -412,8 +412,8 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <a href="index.html" class="logo">Pingu - Solar</a>
-                <a href="index.html" class="back-btn">← Back to Home</a>
+                <a href="teamview.html" class="logo">Pingu - Solar</a>
+                <a href="teamview.html" class="back-btn">← Back to Home</a>
             </div>
             <h1>Additional Day Materials</h1>
             <p class="subtitle">Request additional day and materials for jobs</p>
