--- a/index.html
+++ b/index.html
@@ -494,11 +494,11 @@
                     </div>
                 </a>
                 
-                <a href="#requests" class="nav-card">
+                <a href="submittedadditionaldaymaterials.html" class="nav-card">
                     <div class="nav-card-content">
                         <span class="nav-card-icon">📋</span>
-                        <h2>Additional Day/Materials Request</h2>
-                        <p>Submit requests for extra workdays or additional materials. Track approval status.</p>
+                        <h2>Additional Day/Materials Requests</h2>
+                        <p>Review submissions for additional days and/or materials.</p>
                         <span class="badge">Requests</span>
                     </div>
                 </a>
