--- a/uploaddata.html
+++ b/uploaddata.html
@@ -1006,21 +1006,21 @@
                 // Format the email body
                 const emailBody = `${greeting} ${customerData.Name},
 
-Octopus have passed on your details so that we can make arrangements to install solar.
+Great to hear you are getting solar! What a great choice. 
 
-We understand that your install date is ${customerData['Install Date']}.
+We just wanted to introduce ourselves - Next Generation Utilities and we will be installing your solar panels on behalf of Octopus Energy Services. 
 
-Before this time, we will conduct a survey and walkthrough of the job at a convenient time for you.
+Although your install is not until ${customerData['Install Date']}.you will receive a call from one of our team leaders as they will need to schedule a visit to conduct an onsite survey with you over the next two weeks. 
 
-Scaffolding will go up a few days before the date above and a collection of all rubbish will be made after the install.
+This is just to confirm the design so we can minimise any issues that may occur during the installation. 
 
-If you wish to discuss this further please contact 07851158757, alternatively we will be in touch in due course.
+We want this process to be as smooth as possible so if you have any questions, this will also be an ideal time for you to ask any questions. 
 
-Please do not reply to this email.
-This inbox is not monitored.
+We look forward to meeting you and taking you on the next step of your renewable energy journey. 
 
-Best regards,
-Next Generation Utilities`;
+Regards
+
+Team Next Gen Solar';
                 
                 // EmailJS template parameters
                 const templateParams = {
