--- a/teamview.html
+++ b/teamview.html
@@ -1342,15 +1342,14 @@
                         </div>
                     </div>
                     
-                    <div class="nav-card" onclick="showView('requests')">
-                        <div class="nav-card-content">
+                    <a href="additionaldaymaterials.html" class="nav-card">
+                    <div class="nav-card-content">
                             <span class="nav-card-icon">📝</span>
                             <h2>Additional Day/Materials Request</h2>
                             <p>Submit requests for extra workdays or additional materials. Track approval status.</p>
                             <span class="badge">Requests</span>
                         </div>
-                    </div>
-                </div>
+                    </a>
                 
                 <section class="search-section" id="search-section" style="display: none;">
                     <div class="search-header">
