--- a/teamview.html
+++ b/teamview.html
@@ -1571,7 +1571,7 @@
                     try {
                         // Request FCM token
                         const fcmToken = await getToken(window.messaging, {
-                            vapidKey: 'YOUR_VAPID_KEY_HERE' // You'll need to generate this in Firebase Console
+                            vapidKey: 'BG6CkshZZSjwcHin_GbVcaFCHOG6GrlL3EI28ARmn5rxE5bwLyDX_ZVpXAy8bTcxBaPrhj6JHdo8L4sQl0Lt1ng' // You'll need to generate this in Firebase Console
                         });
                         
                         if (fcmToken) {
