--- a/index.html
+++ b/index.html
@@ -482,6 +482,14 @@
                 <span class="map-arrow">→</span>
             </a>
         </section>
+
+        <section class="timeline-button-section">
+            <a href="viewtimeline.html" class="map-button">
+                <span class="timeline-icon">📅</span>
+                <span class="timeline-text">View Timeline</span>
+                <span class="timeline-arrow">→</span>
+            </a>
+        </section>
         
         <!-- Stats Section -->
         <section class="stats-section" id="stats-section">
