--- a/additionaldaymaterials.html
+++ b/additionaldaymaterials.html
@@ -705,8 +705,8 @@
         const materials = [
             { name: "10 X 2 Csk Cross Bzp Twin Hard", unit: "1000" },
             { name: "19MM X 33M Tape Black 1", unit: "Roll" },
-            { name: "19MM X 33M Tape Blue 1", unit: "1" },
-            { name: "19MM X 33M Tape Brown 1", unit: "1" },
+            { name: "19MM X 33M Tape Blue 1", unit: "Roll" },
+            { name: "19MM X 33M Tape Brown 1", unit: "Roll" },
             { name: "20m Mixed Colour Sleeve 2xBK,BR,BL,GY,YG", unit: "Roll" },
             { name: "20mm IP68 Compression Gland Black 10 Pk", unit: "100" },
             { name: "3 Way 6mm² Compact Lever Connector Clr/O", unit: "30" },
