--- a/staff.html
+++ b/staff.html
@@ -543,6 +543,27 @@
                     </div>
                 </div>
             </div>
+
+            <div class="team-card">
+                <div class="team-header">
+                    <div class="team-name">Subbies</div>
+                    <div class="team-count" id="count-Subbies">0</div>
+                </div>
+                <div class="location-stats">
+                    <div class="location-row">
+                        <span class="location-name">📍 EDF</span>
+                        <span class="location-count" id="loc-Subbies-edf">0</span>
+                    </div>
+                    <div class="location-row">
+                        <span class="location-name">📍 Scottish Power</span>
+                        <span class="location-count" id="loc-Subbies-scottish">0</span>
+                    </div>
+                    <div class="location-row">
+                        <span class="location-name">📍 OES</span>
+                        <span class="location-count" id="loc-Subbies-oes">0</span>
+                    </div>
+                </div>
+            </div>
             
             <div class="team-card">
                 <div class="team-header">
@@ -575,6 +596,7 @@
                         <option value="Richard Wiecko">Richard Wiecko</option>
                         <option value="Scott Carson">Scott Carson</option>
                         <option value="Stuart Whyte">Stuart Whyte</option>
+                        <option value="Subbies">Subbies/option>
                         <option value="Back Office">Back Office</option>
                     </select>
                 </div>
@@ -682,6 +704,7 @@
                 'Richard Wiecko',
                 'Scott Carson',
                 'Stuart Whyte',
+                'Subbies',
                 'Back Office'
             ];
             
