--- a/staff.html
+++ b/staff.html
@@ -596,7 +596,7 @@
                         <option value="Richard Wiecko">Richard Wiecko</option>
                         <option value="Scott Carson">Scott Carson</option>
                         <option value="Stuart Whyte">Stuart Whyte</option>
-                        <option value="Subbies">Subbies/option>
+                        <option value="Subbies">Subbies</option>
                         <option value="Back Office">Back Office</option>
                     </select>
                 </div>
