--- a/staff.html
+++ b/staff.html
@@ -547,20 +547,20 @@
             <div class="team-card">
                 <div class="team-header">
                     <div class="team-name">Subbies</div>
-                    <div class="team-count" id="count-Subbies">0</div>
+                    <div class="team-count" id="count-subbies">0</div>
                 </div>
                 <div class="location-stats">
                     <div class="location-row">
                         <span class="location-name">📍 EDF</span>
-                        <span class="location-count" id="loc-Subbies-edf">0</span>
+                        <span class="location-count" id="loc-subbies-edf">0</span>
                     </div>
                     <div class="location-row">
                         <span class="location-name">📍 Scottish Power</span>
-                        <span class="location-count" id="loc-Subbies-scottish">0</span>
+                        <span class="location-count" id="loc-subbies-scottish">0</span>
                     </div>
                     <div class="location-row">
                         <span class="location-name">📍 OES</span>
-                        <span class="location-count" id="loc-Subbies-oes">0</span>
+                        <span class="location-count" id="loc-subbies-oes">0</span>
                     </div>
                 </div>
             </div>
