--- a/staff.html
+++ b/staff.html
@@ -795,8 +795,8 @@
                     <input type="text" id="full-name" class="form-input" required>
                 </div>
                 <div class="form-group">
-                    <label class="form-label" for="start-date">Start Date</label>
-                    <input type="date" id="start-date" class="form-input" required>
+                    <label class="form-label" for="start-date">Start Date (DD/MM/YYYY)</label>
+                    <input type="text" id="start-date" class="form-input" placeholder="DD/MM/YYYY" required pattern="\d{2}/\d{2}/\d{4}">
                 </div>
                 <div class="form-group">
                     <label class="form-label" for="team-leader">Team Leader</label>
