--- a/staff.html
+++ b/staff.html
@@ -1234,8 +1234,10 @@
                 const leader = emp['Team Leader'] || emp.teamLeader || '—';
                 const location = emp.Location || emp.location || '—';
                 const startDate = emp.startDate || emp['Start Date'];
-                const leave = emp.leaveDate ? new Date(emp.leaveDate).toLocaleDateString() : null;
-                const start = startDate ? new Date(startDate).toLocaleDateString() : null;
+                const leaveDate = parseDateDDMMYYYY(emp.leaveDate);
+                const leave = leaveDate ? leaveDate.toLocaleDateString() : null;
+                const startDateObj = parseDateDDMMYYYY(startDate);
+                const start = startDateObj ? startDateObj.toLocaleDateString() : null;
                 
                 return `
                     <div class="employee-item" onclick="openEditLeaveModal('${emp.id}', '${name}')">
