--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staff Management | Pingu - Solar</title>
+    <title>Staff Management</title>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <style>
@@ -500,7 +500,7 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <a href="index.html" class="logo">Pingu - Solar</a>
+                <a href="index.html" class="logo">Staff Management</a>
                 <a href="index.html" class="back-btn">← Back to Home</a>
             </div>
             <h1>Staff Management</h1>
