--- a/jobsearch.html
+++ b/jobsearch.html
@@ -1622,7 +1622,8 @@
                 const fileCollections = [
                     { name: 'scaffolding-csv', icon: '🏗️', type: 'Scaffolding CSV', accept: '.csv' },
                     { name: 'schletter-pdf', icon: '📄', type: 'Schletter Report', accept: '.pdf' },
-                    { name: 'design-pdf', icon: '🎨', type: 'Design PDF', accept: '.pdf' }
+                    { name: 'design-pdf', icon: '🎨', type: 'Design PDF', accept: '.pdf' },
+                    { name: 'site-surveys', icon: '📋', type: 'Site Survey', accept: '.pdf', isSurvey: true }
                 ];
                 
                 let allFiles = [];
