--- a/jobsearch.html
+++ b/jobsearch.html
@@ -983,8 +983,7 @@
         }
     </style>
 </head>
-<body>
-    <div class="container">
+<div class="container">
         <header>
             <div class="header-content">
                 <a href="index.html" class="logo">Pingu - Solar</a>
@@ -1831,7 +1830,7 @@
                 month: 'short',
                 year: 'numeric',
                 hour: '2-digit',
-                minute: '2-minute'
+                minute: '2-digit'
             });
         }
         
