--- a/jobsearch.html
+++ b/jobsearch.html
@@ -983,7 +983,8 @@
         }
     </style>
 </head>
-<div class="container">
+</body>
+    <div class="container">
         <header>
             <div class="header-content">
                 <a href="index.html" class="logo">Pingu - Solar</a>
@@ -1673,6 +1674,8 @@
                         querySnapshot.forEach((doc) => {
                             const data = doc.data();
                             console.log(`      File: ${data.fileName || 'unnamed'}`);
+                            console.log(`      Available fields:`, Object.keys(data));
+                            console.log(`      Full data:`, data);
                             allFiles.push({
                                 id: doc.id,
                                 ...data,
