--- a/jobsearch.html
+++ b/jobsearch.html
@@ -1669,20 +1669,32 @@
                 y += 15;
           
                 // Helper to load image as base64
+                // Helper to load image as base64 (with proper error handling)
                 async function loadImage(url) {
                     return new Promise((resolve, reject) => {
-                        const img = new Image();
-                        img.crossOrigin = 'anonymous';
-                        img.onload = () => {
-                            const canvas = document.createElement('canvas');
-                            canvas.width = img.width;
-                            canvas.height = img.height;
-                            const ctx = canvas.getContext('2d');
-                            ctx.drawImage(img, 0, 0);
-                            resolve(canvas.toDataURL('image/jpeg', 0.9));
-                        };
-                        img.onerror = reject;
-                        img.src = url;
+                        fetch(url)
+                            .then(response => response.blob())
+                            .then(blob => {
+                                const reader = new FileReader();
+                                reader.onloadend = () => {
+                                    const img = new Image();
+                                    img.onload = () => {
+                                        const canvas = document.createElement('canvas');
+                                        const maxWidth = 180 * 3; // Higher resolution for PDF
+                                        const scale = maxWidth / img.width;
+                                        canvas.width = maxWidth;
+                                        canvas.height = img.height * scale;
+                                        const ctx = canvas.getContext('2d');
+                                        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+                                        resolve(canvas.toDataURL('image/jpeg', 0.85));
+                                    };
+                                    img.onerror = () => reject(new Error('Failed to load image'));
+                                    img.src = reader.result;
+                                };
+                                reader.onerror = () => reject(new Error('Failed to read blob'));
+                                reader.readAsDataURL(blob);
+                            })
+                            .catch(reject);
                     });
                 }
           
