--- a/jobsearch.html
+++ b/jobsearch.html
@@ -1670,14 +1670,21 @@
           
                 // Helper to load image as base64
                 // Helper to load image as base64 (with proper error handling)
+                // Helper to load image as base64 (with proper error handling)
                 async function loadImage(url) {
                     return new Promise((resolve, reject) => {
-                        fetch(url)
-                            .then(response => response.blob())
+                        fetch(url, { mode: 'cors' })
+                            .then(response => {
+                                if (!response.ok) {
+                                    throw new Error(`HTTP error! status: ${response.status}`);
+                                }
+                                return response.blob();
+                            })
                             .then(blob => {
                                 const reader = new FileReader();
                                 reader.onloadend = () => {
                                     const img = new Image();
+                                    img.crossOrigin = 'anonymous';
                                     img.onload = () => {
                                         const canvas = document.createElement('canvas');
                                         const maxWidth = 180 * 3; // Higher resolution for PDF
@@ -1688,13 +1695,22 @@
                                         ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
                                         resolve(canvas.toDataURL('image/jpeg', 0.85));
                                     };
-                                    img.onerror = () => reject(new Error('Failed to load image'));
+                                    img.onerror = (e) => {
+                                        console.error('Image load error:', e);
+                                        reject(new Error('Failed to load image'));
+                                    };
                                     img.src = reader.result;
                                 };
-                                reader.onerror = () => reject(new Error('Failed to read blob'));
+                                reader.onerror = (e) => {
+                                    console.error('FileReader error:', e);
+                                    reject(new Error('Failed to read blob'));
+                                };
                                 reader.readAsDataURL(blob);
                             })
-                            .catch(reject);
+                            .catch(err => {
+                                console.error('Fetch error:', err);
+                                reject(err);
+                            });
                     });
                 }
           
