--- a/jobsearch.html
+++ b/jobsearch.html
@@ -1675,6 +1675,7 @@
                 // Helper to load image as base64 from Firebase Storage URL
                 // Helper to load image from Firebase Storage using SDK (bypasses CORS)
                 // Helper to load image from Firebase Storage using SDK (bypasses CORS)
+                // Helper to load image from Firebase Storage using SDK (bypasses CORS)
                 async function loadImage(url) {
                     return new Promise(async (resolve, reject) => {
                         try {
