--- a/index.html
+++ b/index.html
@@ -546,12 +546,12 @@
                     </div>
                 </a>
                 
-                <a href="addeditteam.html" class="nav-card">
+                <a href="viewsurveys.html" class="nav-card">
                     <div class="nav-card-content">
-                        <span class="nav-card-icon">👥</span>
-                        <h2>Add/Edit Teams</h2>
-                        <p>Manage team rosters, assign roles, and configure team settings and permissions.</p>
-                        <span class="badge">Management</span>
+                        <span class="nav-card-icon">🗳️</span>
+                        <h2>View Surveys</h2></h2>
+                        <p>View all recent and historic surveys.</p>
+                        <span class="badge">Surveys</span>
                     </div>
                 </a>
                 
@@ -561,6 +561,15 @@
                         <h2>Additional Day/Materials Requests</h2>
                         <p>Review submissions for additional days and/or materials.</p>
                         <span class="badge">Requests</span>
+                    </div>
+                </a>
+
+                <a href="addeditteam.html" class="nav-card">
+                    <div class="nav-card-content">
+                        <span class="nav-card-icon">👥</span>
+                        <h2>Add/Edit Teams</h2>
+                        <p>Manage team rosters, assign roles, and configure team settings and permissions.</p>
+                        <span class="badge">Management</span>
                     </div>
                 </a>
             </nav>
