--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                     </div>
                 </a>
                 
-                <a href="viewsurveys.html" class="nav-card">
+                <a href="viewsurvey.html" class="nav-card">
                     <div class="nav-card-content">
                         <span class="nav-card-icon">🗳️</span>
                         <h2>View Surveys</h2></h2>
