--- a/conductsurvey.html
+++ b/conductsurvey.html
@@ -554,42 +554,18 @@
             <div class="alert" id="alert-message"></div>
             
             <!-- Job Number Verification -->
-            <!-- Job Search & Verification -->
 <div class="section-header">
-    📋 Job Search
+    📋 Job Information
 </div>
 
 <div class="form-group">
-    <label class="form-label required">Search by Job Number, Postcode or Customer Name</label>
-    <div style="display: flex; gap: 1rem; margin-bottom: 1rem;">
-        <select id="search-type" class="form-select" style="width: auto;">
-            <option value="jobNumber">Job Number</option>
-            <option value="postcode">Postcode</option>
-            <option value="name">Customer Name</option>
-        </select>
-        <input
-            type="text"
-            id="search-value"
-            class="form-input"
-            placeholder="Enter search term..."
-            style="flex: 1;"
-            required
-        />
-    </div>
+    <label for="job-number" class="form-label required">Job Number</label>
+    <input ... />
 </div>
 
-<button type="button" class="submit-btn" onclick="searchAndVerifyJob()" id="search-btn">
-    Search & Verify Job
+<button type="button" class="submit-btn" onclick="verifyJobNumber()" id="verify-btn">
+    Verify Job Number
 </button>
-
-<div class="loading-spinner" id="loading-spinner">
-    Searching for job...
-</div>
-
-<div class="job-info-card" id="job-info-card">
-    <div class="job-info-header">✓ Job Verified</div>
-    <div class="job-info-grid" id="job-info-grid"></div>
-</div>
             
             <!-- Survey Form (hidden until job verified) -->
             <form id="survey-form" style="display: none;">
