--- a/staff.html
+++ b/staff.html
@@ -894,7 +894,7 @@
                         <span class="headcount-value" id="headcount-2025-${leaderId}">0</span>
                     </div>
                     <div class="headcount-row">
-                        <span class="headcount-label">${currentYear}</span>
+                        <span class="headcount-label">2026</span>
                         <span class="headcount-value" id="headcount-${currentYear}-${leaderId}">0</span>
                     </div>
                     <div class="headcount-row">
